public abstract class PizzaFactory {

    abstract Pizza creerPizza(String type);

}
