public class PizzeriaBrest extends Pizzeria{


    /**
     * Constructeur
     *
     * @param fabrique
     */
    public PizzeriaBrest(PizzaFactory fabrique) {
        super(fabrique);
    }
}
