@startuml
class PizzaPoivronsStyleStrasbourg [[java:PizzaPoivronsStyleStrasbourg]] {
	+PizzaPoivronsStyleStrasbourg()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronsStyleStrasbourg
abstract class PizzaFactory [[java:PizzaFactory]] {
	~{abstract}Pizza creerPizza(String type)
}
class PizzaPoivronsStyleBrest [[java:PizzaPoivronsStyleBrest]] {
	+PizzaPoivronsStyleBrest()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronsStyleBrest
class PizzeriaStrasbourg [[java:PizzeriaStrasbourg]] {
	+PizzeriaStrasbourg(PizzaFactory fabrique)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaStrasbourg
abstract class Pizza [[java:Pizza]] {
	#String name
	#String crust
	#String sauce
	#ArrayList<String> garnitures
	+void preparer()
	+void cuire()
	+void ajoutGarn()
	~{abstract}void couper()
	+void emballer()
	+String getNom()
}
class PizzaFactoryStrasbourg [[java:PizzaFactoryStrasbourg]] {
	-{static}PizzaFactoryStrasbourg instance
	-PizzaFactoryStrasbourg()
	+Pizza creerPizza(String type)
	+{static}PizzaFactoryStrasbourg getInstance()
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryStrasbourg
class PizzaTestDrive [[java:PizzaTestDrive]] {
	+{static}void main(String[] args)
}
class PizzaFactoryBrest [[java:PizzaFactoryBrest]] {
	-{static}PizzaFactoryBrest instance
	-PizzaFactoryBrest()
	+Pizza creerPizza(String type)
	+{static}PizzaFactoryBrest getInstance()
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryBrest
class PizzeriaFactory [[java:PizzeriaFactory]] {
	-{static}PizzeriaFactory instance
	-PizzeriaFactory()
	+Pizzeria creer(String type)
	+{static}PizzeriaFactory getInstance()
}
class Pizzeria [[java:Pizzeria]] {
}
PizzeriaFactory --> "1" Pizzeria : pizzeria
class PizzeriaBrest [[java:PizzeriaBrest]] {
	+PizzeriaBrest(PizzaFactory fabrique)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaBrest
class PizzaFromageStyleStrasbourg [[java:PizzaFromageStyleStrasbourg]] {
	+PizzaFromageStyleStrasbourg()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaFromageStyleStrasbourg
class PizzaGrecqueStyleBrest [[java:PizzaGrecqueStyleBrest]] {
	+PizzaGrecqueStyleBrest()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleBrest
class PizzaGrecqueStyleStrasbourg [[java:PizzaGrecqueStyleStrasbourg]] {
	+PizzaGrecqueStyleStrasbourg()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleStrasbourg
class Main [[java:Main]] {
	+{static}void main(String[] argv)
}
class PizzaFromageStyleBrest [[java:PizzaFromageStyleBrest]] {
	+PizzaFromageStyleBrest()
	~void couper()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaFromageStyleBrest
abstract class Pizzeria [[java:Pizzeria]] {
	+Pizzeria(PizzaFactory fabrique)
	+Pizza commanderPizza(String type)
}
class PizzaFactory [[java:PizzaFactory]] {
}
Pizzeria --> "1" PizzaFactory : fabrique
class PizzeriaFactory [[java:PizzeriaFactory]] {
}
Pizzeria --> "1" PizzeriaFactory : fect
class PizzaTestDrive [[java:PizzaTestDrive]] {
	+{static}void main(String[] args)
}
@enduml